# trust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-28-2327.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/: main.rs
